--- a/assets/locales/main/en.yaml
+++ b/assets/locales/main/en.yaml
@@ -1,6 +1,15 @@
 levelDefaults:
   title: Simple neural networks
   description: Adjust the neural network's bias and weights until the error is minimized for the given training data.
+  labels:
+    node:
+      name: ''
+      bias: Bias
+      input: Input
+      sum: Sum
+      activation: Activation
+    edge:
+      weight: Weight
 slider:
   previous: Previous Level
   next: Next Level
